UI fixes, allow text fields to be editable, make UI nicer on small devices by adding media query

--- a/ui/src/scss/_App.scss
+++ b/ui/src/scss/_App.scss
@@ -1,6 +1,6 @@
 .App {
 	width: 80%;
-	max-width: 400px;
+	max-width: 500px;
 	border-radius: 40px;
 	padding: 30px;
 	background-color: $primary-color;
@@ -9,5 +9,13 @@
 
 	.react-swipeable-view-container > div {
 		@include d-flex;
+	}
+}
+
+@media screen and (max-width: 512px) {
+	.App{	
+		width: 100%;
+		max-width: 100%;
+		border-radius: 0px;
 	}
 }
